project ("ADBench")

# Include sub-projects.
#add_subdirectory ("Adept")
#add_subdirectory ("ADiMat")
#add_subdirectory ("ADOLC")
#add_subdirectory ("Autograd")
#add_subdirectory ("Ceres")
#add_subdirectory ("cpp-common")
 add_subdirectory ("DiffSharp")
#add_subdirectory ("Julia")
#add_subdirectory ("matlab-common")
#add_subdirectory ("MuPad")
#add_subdirectory ("Tapenade")
#add_subdirectory ("Theano")
