pkgdata_DATA = README COPYING ChangeLog NEWS AUTHORS doc/adept_documentation.pdf
SUBDIRS = adept include test benchmark
# The test and doc directories do not use automake so we need to
# specify the files that will be included in the distribution
EXTRA_DIST = test/Makefile test/README test/*.cpp test/*.h \
	doc/Makefile doc/README doc/COPYING doc/adept_documentation.tex
