project("ADBench_ManualEigen" CXX)

add_library("ManualEigen" MODULE)
target_sources("ManualEigen" PRIVATE "gmm_d.cpp")
target_sources("ManualEigen" PRIVATE "gmm_simple_d.cpp")
target_sources("ManualEigen" PRIVATE "ba_d.cpp")
target_sources("ManualEigen" PRIVATE "hand_eigen_d.cpp")
target_sources("ManualEigen" PRIVATE "${CMAKE_SOURCE_DIR}/src/cpp/shared/utils.cpp")
target_sources("ManualEigen" PUBLIC "ManualEigenGMM.cpp")
target_sources("ManualEigen" PUBLIC "ManualEigenBA.cpp")
target_sources("ManualEigen" PUBLIC "ManualEigenHand.cpp")

add_library("ManualEigenVector" MODULE)
target_sources("ManualEigenVector" PRIVATE "gmm_d.cpp")
target_sources("ManualEigenVector" PRIVATE "gmm_vector_d.cpp")
target_sources("ManualEigenVector" PRIVATE "${CMAKE_SOURCE_DIR}/src/cpp/shared/utils.cpp")
target_sources("ManualEigenVector" PUBLIC "ManualEigenVectorGMM.cpp")