project("ADBench_ManualEigen" CXX)

add_library("ManualEigen" MODULE)
target_sources("ManualEigen" PRIVATE "gmm_d.cpp")
target_sources("ManualEigen" PRIVATE "gmm_scalar_d.cpp")
target_sources("ManualEigen" PRIVATE "ba_d.cpp")
target_sources("ManualEigen" PRIVATE "hand_eigen_d.cpp")
target_sources("ManualEigen" PRIVATE "lstm_eigen_d.cpp")
target_sources("ManualEigen" PRIVATE "${CMAKE_SOURCE_DIR}/src/cpp/shared/utils.cpp")
target_sources("ManualEigen" PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/ManualEigenGMM.cpp")
target_sources("ManualEigen" PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/ManualEigenBA.cpp")
target_sources("ManualEigen" PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/ManualEigenHand.cpp")
target_sources("ManualEigen" PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/ManualEigenLSTM.cpp")